<resources>
	<string name="app_name">FChat</string>
	<string name="activity_streams">Streams</string>
	<string name="activity_stream">Chat</string>
	<string name="activity_main_chat">Main Chat</string>
	<string name="activity_login">Login to Funstream</string>
	<string name="title_activity_about" translatable="false">About</string>
	<string name="title_activity_licenses">Licenses</string>
	<string name="refresh">Refresh</string>
	<string name="search">Search</string>
	<string name="search_query_hint">Streamer or channel</string>
	<string name="activity_login_prompt_username">Username</string>
	<string name="activity_login_prompt_password">Password</string>
	<string name="log_in">Log in via Browser</string>
	<string name="log_in_from_site">Log in via browser (OAuth)</string>
	<string name="log_in_from_site_desc">* You do not need enter your credentials if you\'re using OAuth</string>
	<string name="log_in_error">Username or Password is incorrect</string>
	<string name="error_username_required">Username is required</string>
	<string name="error_password_required">Password is required</string>
	<string name="error_login">Login problems</string>
	<string name="error_didnt_grant_access">Sorry, but you did not grant access for this app</string>
	<string name="tab_title_streams">Streams</string>
	<string name="tab_title_channels">Channels</string>
	<string name="tab_title_favorites">Favorites</string>
	<string name="tab_title_rooms">Rooms</string>
	<string name="stream_reload">Reload</string>
	<string name="error_stream_loading">Can\'t load stream</string>
	<string name="error_chat_loading">Can\'t load chat</string>
	<string name="error_no_connection">No connection</string>
	<string name="error_streams_loading">Can\'t load streams</string>
	<string name="error_loading_action">Try again</string>
	<string name="error_chat_join">Can\'t join chat channel</string>
	<string name="error_chat_leave">Can\'t join leave channel</string>
	<string name="error_chat_send_message">Can\'t send message</string>
	<string name="error_chat_login">Can\'t login</string>
	<string name="error_chat_history">Can\'t get chat history</string>
	<string name="error_chat_user_list">Can\'t get user list</string>
	<string name="action_settings">Settings</string>
	<string name="main" translatable="false">Main</string>
	<string name="streamer">Message to streamer</string>
	<string name="prefs_category_title_chat">Chat settings</string>
	<string name="prefs_chat_scroll">Chat scroll</string>
	<string name="prefs_chat_scroll_summary">Scroll chat to bottom</string>
	<string name="prefs_chat_awake">Screen on</string>
	<string name="prefs_chat_awake_summary">Keep chat screen on</string>
	<string name="prefs_chat_images">Show images</string>
	<string name="prefs_chat_images_summary">Allow show images</string>
	<string name="prefs_chat_smiley">Show smileys</string>
	<string name="prefs_chat_smiley_summary">Show smileys in chat</string>
	<string name="chat_connect">Connecting …</string>
	<string name="chat_reconnect">Reconnecting …</string>
	<string name="chat_reconnect_error">Reconnect error</string>
	<string name="chat_connect_error">Connect error</string>
	<string name="chat_error">Chat error</string>
	<string name="intro_main_link_text">Main chat tab</string>
	<string name="intro_streamer_message_text">You can send messages to streamer</string>
	<string name="intro_start_text">Let\'s start!</string>
	<string name="dialog_login_title">Log in</string>
	<string name="dialog_login_pending">Authenticating …</string>
	<string name="dialog_users_title">Users:</string>
	<string name="category_top">Top</string>
	<string name="auth_log_out">Log out</string>
    <string name="user_account_label">You are signed in as :</string>
    <string name="user_expire_label">Token expires in :</string>
    <string name="auth_dialog_help_desc">Enter your login password and click on Confirm button.</string>
</resources>