<?xml version="1.0" encoding="utf-8"?>
<!--
  ~   Copyright (C) 2015 Alex Neeky
  ~
  ~   Licensed under the Apache License, Version 2.0 (the "License");
  ~   you may not use this file except in compliance with the License.
  ~   You may obtain a copy of the License at
  ~
  ~          http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~   Unless required by applicable law or agreed to in writing, software
  ~   distributed under the License is distributed on an "AS IS" BASIS,
  ~   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~   See the License for the specific language governing permissions and
  ~   limitations under the License.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
                android:id="@+id/login_root">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:padding="@dimen/spacing_big"
        android:id="@+id/linearLayout3"
        android:visibility="gone">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/username_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_small"
            style="@style/LoginEditTextStyle"
            >
            <EditText
                android:id="@+id/username_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:inputType="textPersonName"
                android:hint="@string/activity_login_prompt_username"
                android:textStyle="bold"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/password_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/LoginEditTextStyle"
            >
            <EditText
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:inputType="textPassword"
                android:hint="@string/activity_login_prompt_password"
                android:imeOptions="actionDone"
                android:textStyle="bold"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:id="@+id/linearLayout2"
        android:layout_centerInParent="true"
        >

        <Button
            android:id="@+id/bt_log_in"
            style="@style/LoginButtinStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/log_in"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/spacing_big"
            android:visibility="gone"/>

        <Button
            android:layout_width="match_parent"
            style="style/LoginButtinStyle"
            android:layout_height="match_parent"
            android:text="@string/log_in_from_site"
            android:id="@+id/btOAuthLogin"
            android:layout_weight="1"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:enabled="false" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:text="@string/log_in_from_site_desc"

        android:layout_below="@+id/linearLayout3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:padding="@dimen/spacing_big"
        android:textColor="@color/white"
        android:visibility="gone"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/auth_dialog_help_desc"
        android:id="@+id/textView5"
        android:layout_above="@+id/linearLayout2"
        android:layout_marginBottom="16dp"
        android:layout_toRightOf="@+id/linearLayout3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:padding="16dp"
        android:textSize="@dimen/text_size_normal"
        android:gravity="center"
        android:textColor="@color/primary_text_light" />
</RelativeLayout>